--- a/articles/cognitive-services/LUIS/toc.yml
+++ b/articles/cognitive-services/LUIS/toc.yml
@@ -52,7 +52,7 @@
           href: luis-tutorial-pattern.md
     - name: ボットで使用する
       items:
-        - name: 'C# の場合'
+        - name: C# の場合
           href: luis-csharp-tutorial-bf-v4.md
           displayName: 'bot framework, framework, sdk, abs'
         - name: Node.js の場合
@@ -125,6 +125,14 @@
         - name: 設計戦略
           href: luis-concept-enterprise.md
           displayName: import
+    - name: LUIS を使用した DevOps プラクティスの適用
+      items:
+        - name: LUIS のソース管理およびブランチ戦略
+          href: luis-concept-devops-sourcecontrol.md
+        - name: DevOps のテスト
+          href: luis-concept-devops-testing.md
+        - name: CI/CD ワークフロー
+          href: luis-concept-devops-automation.md
 - name: 操作方法ガイド
   items:
     - name: 新しいアプリの開始
@@ -238,11 +246,13 @@
         - name: コンテナーの制限
           href: luis-container-limitations.md
           displayName: 'phrase list recommendations, multi-language, translator, locale, language, English, Chinese, French, German, Italian, Korean, Portuguese, Spanish, Turkish, Keigo, subculture, dictation, speech, Bing Spell Check, foreign words, Hybrid languages, Tokenization, space, special character, compound words, tokens'
+    - name: DevOps の使用
+      href: luis-how-to-devops-with-github.md
     - name: 関連サービス
       items:
         - name: Azure Bot Service
           href: 'https://dev.botframework.com/'
-        - name: 'Bot Builder 4.x SDK C#'
+        - name: Bot Builder 4.x SDK C#
           href: 'https://github.com/Microsoft/botbuilder-dotnet'
         - name: QnA Maker
           href: 'https://qnamaker.ai/'
@@ -284,7 +294,7 @@
               href: luis-reference-response-codes.md
         - name: SDK
           items:
-            - name: 'C#'
+            - name: C#
               items:
                 - name: NuGet - オーサリング
                   href: 'https://www.nuget.org/packages/Microsoft.Azure.CognitiveServices.Language.LUIS.Authoring/'
