--- a/articles/sentinel/TOC.yml
+++ b/articles/sentinel/TOC.yml
@@ -27,6 +27,8 @@
       href: roles.md
     - name: 高度なマルチステージ攻撃の検出
       href: fusion.md
+    - name: ワークスペースおよびテナント全体での Azure Sentinel の拡張
+      href: extend-sentinel-across-workspaces-tenants.md
 - name: 操作方法ガイド
   items:
     - name: データ ソースの接続
@@ -84,8 +86,6 @@
               href: connect-syslog.md
             - name: Zimperium Mobile Threat Defense
               href: connect-zimperium-mtd.md
-            - name: Logstash の使用
-              href: connect-logstash.md
             - name: CEF ベースのソリューション
               href: connect-common-event-format.md
               items:
