--- a/articles/aks/TOC.yml
+++ b/articles/aks/TOC.yml
@@ -222,6 +222,9 @@
               href: http-application-routing.md
             - name: 内部ネットワークの使用
               href: ingress-internal-ip.md
+            - name: 既存の AKS クラスターの AGIC アドオンを有効にする
+              href: ../application-gateway/tutorial-ingress-controller-add-on-existing.md
+              maintainContext: true
             - name: 独自の証明書での TLS の使用
               href: ingress-own-tls.md
             - name: Let's Encrypt での TLS の使用
@@ -416,7 +419,7 @@
     - name: REST
       href: /rest/api/aks
     - name: PowerShell
-      href: '/powershell/module/az.aks#aks'
+      href: /powershell/module/az.aks#aks
     - name: .NET
       href: /dotnet/api/overview/azure/containerservice
     - name: Python
