--- a/articles/container-registry/TOC.yml
+++ b/articles/container-registry/TOC.yml
@@ -140,7 +140,7 @@
           items:
             - name: 診断と監査ログ
               href: container-registry-diagnostics-audit-logs.md
-            - name: Azure Policy を使用したコンプライアンスの監査 (プレビュー)
+            - name: Azure Policy を使用したコンプライアンスの監査
               href: container-registry-azure-policy.md
         - name: トラブルシューティング
           expanded: false
