--- a/articles/firewall-manager/toc.yml
+++ b/articles/firewall-manager/toc.yml
@@ -24,7 +24,7 @@
       href: secured-virtual-hub.md
     - name: 一般的なデプロイ プロセス
       href: deployment-overview.md
-    - name: 信頼されたセキュリティ パートナー
+    - name: セキュリティ パートナー プロバイダー
       href: trusted-security-partners.md
     - name: ルール処理ロジック
       href: rule-processing.md
@@ -32,7 +32,7 @@
       href: vhubs-and-vnets.md
 - name: 操作方法ガイド
   items:
-    - name: 信頼されたセキュリティ パートナーのデプロイ
+    - name: セキュリティ パートナー プロバイダーのデプロイ
       href: deploy-trusted-security-partner.md
     - name: ファイアウォール ポリシーへの移行 - PowerShell
       href: migrate-to-policy.md
