--- a/articles/key-vault/general/toc.yml
+++ b/articles/key-vault/general/toc.yml
@@ -66,6 +66,8 @@
   items:
     - name: 認証
       items:
+        - name: Key Vault に対する認証
+          href: authentication.md
         - name: App Service のマネージド ID を使用する
           href: managed-identity.md
         - name: アクセス制御ポリシーを使用する
@@ -123,7 +125,7 @@
     - name: 一般的なパラメーターとヘッダー
       href: common-parameters-and-headers.md
     - name: Azure PowerShell
-      href: '/powershell/module/az.keyvault/?view=azps-1.2.0#key_vault'
+      href: /powershell/module/az.keyvault/?view=azps-1.2.0#key_vault
     - name: Azure CLI
       href: /cli/azure/keyvault
     - name: .NET
