--- a/articles/remote-rendering/reference/toc.yml
+++ b/articles/remote-rendering/reference/toc.yml
@@ -10,5 +10,7 @@
   href: 'https://github.com/Azure/azure-remote-rendering'
 - name: Azure Mixed Reality Resource Management REST API
   href: 'https://docs.microsoft.com/rest/api/mixedreality/'
-- name: 'C# API のドキュメント'
+- name: C# API のドキュメント
   href: 'https://docs.microsoft.com/dotnet/api/Microsoft.Azure.RemoteRendering'
+- name: C++ API のドキュメント
+  href: 'https://docs.microsoft.com/cpp/api/remote-rendering'
