--- a/articles/index.yml
+++ b/articles/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.date: 02/27/2020
   featureFlags:
   - clicktale
-  ms.openlocfilehash: 2bd4075f405e034d15eaec3ac31065e4138c41fb
-  ms.sourcegitcommit: 0a5bb9622ee6a20d96db07cc6dd45d8e23d5554a
+  ms.openlocfilehash: f99b1adb71e7c20809b18699cb29a46dfca1b755
+  ms.sourcegitcommit: e3c28affcee2423dc94f3f8daceb7d54f8ac36fd
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 06/05/2020
-  ms.locfileid: "84447987"
+  ms.lasthandoff: 06/17/2020
+  ms.locfileid: "84884280"
 highlightedContent:
   items:
   - title: Azure 開発者向けファースト ステップ ガイド
@@ -1213,7 +1213,7 @@ productDirectory:
     azureCategories:
     - storage
     url: virtual-machines/windows/managed-disks-overview.md
-  - title: File Storage
+  - title: Azure Files
     summary: 標準の SMB 3.0 プロトコルを使用するファイル共有
     imageSrc: https://static.docs.com/ui/media/product/azure/storage-accounts.svg
     azureCategories:
