--- a/articles/remote-rendering/quickstarts/toc.yml
+++ b/articles/remote-rendering/quickstarts/toc.yml
@@ -1,8 +1,14 @@
-- name: Unity によるモデルのレンダリング
-  href: render-model.md
-- name: Unity のサンプルを HoloLens にデプロイする
-  href: deploy-to-hololens.md
-- name: Unity のサンプルをデスクトップにデプロイする
-  href: deploy-to-desktop.md
+- name: Unity
+  items:
+    - name: Unity によるモデルのレンダリング
+      href: render-model.md
+    - name: Unity のサンプルを HoloLens にデプロイする
+      href: deploy-to-hololens.md
+    - name: Unity のサンプルをデスクトップにデプロイする
+      href: deploy-to-desktop.md
+- name: ネイティブ C++
+  items:
+    - name: ネイティブ C++ サンプルを HoloLens にデプロイする
+      href: native-cpp/hololens/deploy-native-cpp-tutorial.md
 - name: モデルをレンダリング用に変換する
   href: convert-model.md
