--- a/articles/remote-rendering/resources/tools/toc.yml
+++ b/articles/remote-rendering/resources/tools/toc.yml
@@ -1,2 +1,4 @@
 - name: ArrInspector 検査ツール
   href: arr-inspector.md
+- name: Azure Remote Rendering Asset Tool
+  href: ../../samples/azure-remote-rendering-asset-tool.md
