--- a/articles/active-directory-b2c/TOC.yml
+++ b/articles/active-directory-b2c/TOC.yml
@@ -357,6 +357,20 @@
               href: relyingparty.md
             - name: 要求リゾルバー
               href: claim-resolver-overview.md
+    - name: パートナー統合
+      items:
+        - name: Azure AD B2C パートナー ギャラリー
+          href: partner-gallery.md
+        - name: Arkose Labs
+          href: partner-arkose-labs.md
+        - name: IDology
+          href: partner-idology.md
+        - name: itsme
+          href: partner-itsme.md
+        - name: Trusona
+          href: partner-trusona.md
+        - name: Twilio
+          href: partner-twilio.md
     - name: b2clogin.com の使用
       items:
         - name: b2clogin.com の概要
