--- a/articles/aks/TOC.yml
+++ b/articles/aks/TOC.yml
@@ -24,27 +24,6 @@
       items:
         - name: Helm を使用した開発
           href: quickstart-helm.md
-        - name: Azure Dev Spaces
-          expanded: true
-          items:
-            - name: チーム開発に Azure Dev Spaces を使用する
-              href: ../dev-spaces/quickstart-team-development.md
-              maintainContext: true
-            - name: Visual Studio Code の使用
-              href: ../dev-spaces/quickstart-netcore.md
-              maintainContext: true
-            - name: Visual Studio を使用する
-              href: ../dev-spaces/quickstart-netcore-visualstudio.md
-              maintainContext: true
-            - name: CLI の使用
-              href: ../dev-spaces/quickstart-cli.md
-              maintainContext: true
-            - name: Azure Dev Spaces で Java を使用する
-              href: ../dev-spaces/quickstart-java.md
-              maintainContext: true
-            - name: Azure Dev Spaces で Node.js を使用する
-              href: ../dev-spaces/quickstart-nodejs.md
-              maintainContext: true
 - name: チュートリアル
   items:
     - name: 1 - AKS 用にアプリケーションを準備する
@@ -302,54 +281,10 @@
           href: 'https://docs.microsoft.com/virtualization/windowscontainers/manage-docker/optimize-windows-dockerfile?context=/azure/aks/context/aks-context'
     - name: アプリケーションの開発と実行
       items:
-        - name: Dev Spaces を使用した開発
-          href: ../dev-spaces/azure-dev-spaces.md
-          maintainContext: true
-          items:
-            - name: Java (VS Code と CLI)
-              items:
-                - name: 1 - はじめに
-                  href: ../dev-spaces/get-started-java.md
-                  maintainContext: true
-                - name: 2 - マルチサービス開発
-                  href: ../dev-spaces/multi-service-java.md
-                  maintainContext: true
-                - name: 3 - チーム開発
-                  href: ../dev-spaces/team-development-java.md
-                  maintainContext: true
-            - name: .NET Core (VS Code と CLI)
-              items:
-                - name: 1 - はじめに
-                  href: ../dev-spaces/get-started-netcore.md
-                  maintainContext: true
-                - name: 2 - マルチサービス開発
-                  href: ../dev-spaces/multi-service-netcore.md
-                  maintainContext: true
-                - name: 3 - チーム開発
-                  href: ../dev-spaces/team-development-netcore.md
-                  maintainContext: true
-            - name: .NET Core (Visual Studio 2017)
-              items:
-                - name: 1 - はじめに
-                  href: ../dev-spaces/get-started-netcore-visualstudio.md
-                  maintainContext: true
-                - name: 2 - マルチサービス開発
-                  href: ../dev-spaces/multi-service-netcore-visualstudio.md
-                  maintainContext: true
-                - name: 3 - チーム開発
-                  href: ../dev-spaces/team-development-netcore-visualstudio.md
-                  maintainContext: true
-            - name: Node.js (VS Code と CLI)
-              items:
-                - name: 1 - はじめに
-                  href: ../dev-spaces/get-started-nodejs.md
-                  maintainContext: true
-                - name: 2 - マルチサービス開発
-                  href: ../dev-spaces/multi-service-nodejs.md
-                  maintainContext: true
-                - name: 3 - チーム開発
-                  href: ../dev-spaces/team-development-nodejs.md
-                  maintainContext: true
+        - name: Visual Studio Code を使用して Local Process with Kubernetes を利用する (プレビュー)
+          href: ../dev-spaces/how-to/local-process-kubernetes-vs-code.md
+        - name: Visual Studio で Local Process with Kubernetes を使用する (プレビュー)
+          href: ../dev-spaces/how-to/local-process-kubernetes-visual-studio.md
         - name: 既存のアプリケーションを Helm でインストールする
           href: kubernetes-helm.md
         - name: OpenFaaS の使用
