--- a/articles/azure-sql-edge/toc.yml
+++ b/articles/azure-sql-edge/toc.yml
@@ -6,6 +6,8 @@
       href: overview.md
     - name: サポートされるエディションと機能
       href: features.md
+    - name: リリース ノート
+      href: release-notes.md
 - name: クイックスタート
   expanded: true
   items:
