--- a/articles/backup/toc.yml
+++ b/articles/backup/toc.yml
@@ -422,7 +422,7 @@
     - name: Microsoft Q&A 質問ページ
       href: 'https://docs.microsoft.com/answers/topics/azure-backup.html'
     - name: 料金計算ツール
-      href: 'https://azure.microsoft.com/pricing/calculator/'
+      href: azure-backup-pricing.md
     - name: サービスの更新情報
       href: 'https://azure.microsoft.com/updates/?product=backup'
     - name: ビデオ
