--- a/articles/governance/resource-graph/index.yml
+++ b/articles/governance/resource-graph/index.yml
@@ -9,13 +9,13 @@ metadata:
   ms.collection: collection
   author: DCtheGeek
   ms.author: dacoulte
-  ms.date: 05/20/2020
-  ms.openlocfilehash: 31363296d07c9e5181b4c6ab2781a455a4799dbc
-  ms.sourcegitcommit: 64fc70f6c145e14d605db0c2a0f407b72401f5eb
+  ms.date: 06/16/2020
+  ms.openlocfilehash: 8f4bce7f5230af69a4a1efc3382c3ca6d4a24f59
+  ms.sourcegitcommit: e3c28affcee2423dc94f3f8daceb7d54f8ac36fd
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 05/27/2020
-  ms.locfileid: "83874113"
+  ms.lasthandoff: 06/17/2020
+  ms.locfileid: "84888128"
 landingContent:
 - title: Azure Resource Graph について
   linkLists:
@@ -37,10 +37,12 @@ landingContent:
     links:
     - text: 初めてのクエリ (ポータル)
       url: ./first-query-portal.md
-    - text: 初めてのクエリ (PowerShell)
-      url: ./first-query-powershell.md
-    - text: 初めてのクエリ (CLI)
+    - text: 初めてのクエリ (Azure CLI)
       url: ./first-query-azurecli.md
+    - text: 初めてのクエリ (Azure PowerShell)
+      url: ./first-query-powershell.md
+    - text: 初めてのクエリ (Go)
+      url: ./first-query-go.md
     - text: 初めてのクエリ (Python)
       url: ./first-query-python.md
     - text: クエリの共有 (ポータル)
