--- a/articles/healthcare-apis/index.yml
+++ b/articles/healthcare-apis/index.yml
@@ -1,48 +1,53 @@
-### YamlMime:YamlDocument
-documentType: LandingData
-title: Azure API for FHIR プレビューのドキュメント
+### YamlMime:Landing
+title: Azure API for FHIR のドキュメント
+summary: Azure API for FHIR は、標準ベースでコンプライアンスに準拠している医療データ用マネージド API であり、アクションにつながる分析と機械学習のためのソリューションを実現できます。
 metadata:
-  title: Azure API for FHIR プレビューのドキュメント
-  meta.description: Learn how Azure API for FHIR can power healthcare iteroperability in Azure.
+  title: Azure API for FHIR のドキュメント - チュートリアル、ハウツー ガイド
+  description: Azure API for FHIR は、標準ベースでコンプライアンスに準拠している医療データ用マネージド API であり、アクションにつながる分析と機械学習のためのソリューションを実現できます。
   services: healthcare-apis
-  author: hansenms
-  manager: dougseven
-  ms.author: mihansen
   ms.service: healthcare-apis
   ms.subservice: fhir
   ms.topic: landing-page
-  ms.date: 02/07/2019
-abstract:
-  description: Azure API for FHIR® プレビューは、医療上の健康データ向けのフル マネージドで標準ベースに準拠した API です。このデータを使用すると、健康データを使用した分析、機械学習、実用的なインテリジェンスに対して新しいエンゲージメント システムを作成できます。
-sections:
-  - title: null
-    items:
-      - type: paragraph
-        text: FHIR&reg; は HL7 の登録商標であり、HL7 の許可を得て使用しています。
-  - title: 5 分間のクイック スタート
-    items:
-      - type: paragraph
-        text: 矢印リンクを選択すると、Azure API for FHIR プレビューで Azure のヘルスケア相互運用性を強化する方法を確認できます <img src="media/index/link.jpg" height="15" width="15"></img>。
-      - type: table
-        style: dataMatrix
-        columns:
-          - image:
-              src: media/index/portal.svg
-            title: Azure ポータル
-          - image:
-              src: media/index/powershell.svg
-            title: Azure PowerShell
-          - image:
-              src: media/index/cli.svg
-            title: Azure CLI
-        rows:
-          - title: Azure API for FHIR をデプロイする
-            values:
-              - href: fhir-paas-portal-quickstart.md
-              - href: fhir-paas-powershell-quickstart.md
-              - href: fhir-paas-cli-quickstart.md
-          - title: オープンソースの FHIR Server をデプロイする
-            values:
-              - href: fhir-oss-portal-quickstart.md
-              - href: fhir-oss-powershell-quickstart.md
-              - href: fhir-oss-cli-quickstart.md
+  ms.collection: collection
+  author: hansenms
+  ms.author: mihansen
+  ms.date: 11/06/2019
+  ms.openlocfilehash: f4572a38073a929d00bcccce94d9e73634b92633
+  ms.sourcegitcommit: f52ce6052c795035763dbba6de0b50ec17d7cd1d
+  ms.translationtype: HT
+  ms.contentlocale: ja-JP
+  ms.lasthandoff: 01/24/2020
+  ms.locfileid: "84819757"
+landingContent:
+- title: Azure API for FHIR の開始
+  linkLists:
+  - linkListType: overview
+    links:
+    - text: Azure API for FHIR とは
+      url: overview.md
+  - linkListType: quickstart
+    links:
+    - text: FHIR 用の API サーバーのデプロイ
+      url: fhir-paas-portal-quickstart.md
+- title: チュートリアルの設定
+  linkLists:
+  - linkListType: tutorial
+    links:
+    - text: FHIR サービスからデータを読み取る JavaScript アプリのデプロイ
+      url: tutorial-web-app-fhir-server.md
+    - text: Postman を使用して FHIR API にアクセスする
+      url: access-fhir-postman-tutorial.md
+    - text: サードパーティ アプリと医療記録の SMART 統合
+      url: use-smart-on-fhir-proxy.md
+- title: AD 認証用のアプリの登録
+  linkLists:
+  - linkListType: how-to-guide
+    links:
+    - text: リソース アプリを登録する
+      url: register-resource-azure-ad-client-app.md
+    - text: 機密クライアント アプリを登録する
+      url: register-confidential-azure-ad-client-app.md
+    - text: パブリック クライアント アプリを登録する
+      url: register-public-azure-ad-client-app.md
+    - text: サービス クライアント アプリを登録する
+      url: register-service-azure-ad-client-app.md
