--- a/articles/index.yml
+++ b/articles/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.date: 02/27/2020
   featureFlags:
   - clicktale
-  ms.openlocfilehash: f99b1adb71e7c20809b18699cb29a46dfca1b755
-  ms.sourcegitcommit: e3c28affcee2423dc94f3f8daceb7d54f8ac36fd
+  ms.openlocfilehash: 17798401c9781ab567f50ef141f96cc885083b01
+  ms.sourcegitcommit: 9bfd94307c21d5a0c08fe675b566b1f67d0c642d
   ms.translationtype: HT
   ms.contentlocale: ja-JP
   ms.lasthandoff: 06/17/2020
-  ms.locfileid: "84884280"
+  ms.locfileid: "84974961"
 highlightedContent:
   items:
   - title: Azure 開発者向けファースト ステップ ガイド
@@ -55,6 +55,13 @@ productDirectory:
     - ai-machine-learning
     - web
     url: search/index.yml
+  - title: Azure Cognitive Services
+    summary: スマートな API 機能を追加して状況に合ったやり取りを実現します
+    imageSrc: https://static.docs.com/ui/media/product/azure/cognitive-services.svg
+    azureCategories:
+    - featured
+    - ai-machine-learning
+    url: cognitive-services/index.yml
   - title: Azure Databricks
     summary: 高速で使いやすい、コラボレーション対応の Apache Spark ベースの分析プラットフォーム
     imageSrc: https://static.docs.com/ui/media/product/azure/databricks.svg
@@ -135,13 +142,6 @@ productDirectory:
     azureCategories:
     - ai-machine-learning
     url: cognitive-services/bing-web-search/overview.md
-  - title: Cognitive Services
-    summary: スマートな API 機能を追加して状況に合ったやり取りを実現します
-    imageSrc: https://static.docs.com/ui/media/product/azure/cognitive-services.svg
-    azureCategories:
-    - featured
-    - ai-machine-learning
-    url: cognitive-services/index.yml
   - title: Computer Vision
     summary: 画像から意思決定に役立つ情報を抽出します
     imageSrc: https://static.docs.com/ui/media/product/azure/cognitive-services.svg
