--- a/articles/synapse-analytics/sql-data-warehouse/toc.yml
+++ b/articles/synapse-analytics/sql-data-warehouse/toc.yml
@@ -33,6 +33,8 @@
           href: create-data-warehouse-portal.md
         - name: PowerShell
           href: create-data-warehouse-powershell.md
+        - name: ARM テンプレート
+          href: quickstart-arm-template.md
     - name: データの読み込み
       items:
         - name: COPY ステートメント
