--- a/articles/time-series-insights/TOC.yml
+++ b/articles/time-series-insights/TOC.yml
@@ -41,9 +41,9 @@
           items:
             - name: 認証と承認
               href: time-series-insights-authentication-and-authorization.md
-            - name: 'C# によるデータのクエリ'
+            - name: C# によるデータのクエリ
               href: time-series-insights-query-data-csharp.md
-            - name: 'C# での参照データの管理'
+            - name: C# での参照データの管理
               href: time-series-insights-manage-reference-data-csharp.md
             - name: カスタム ビューの共有
               href: time-series-insights-parameterized-urls.md
@@ -65,7 +65,7 @@
           items:
             - name: 認証と承認
               href: time-series-insights-authentication-and-authorization.md
-            - name: 'C# によるデータのクエリ'
+            - name: C# によるデータのクエリ
               href: time-series-insights-update-query-data-csharp.md
             - name: Power BI 統合
               href: concepts-power-bi.md
@@ -111,6 +111,12 @@
           href: time-series-insights-update-how-to-shape-events.md
         - name: Power BI に接続する
           href: how-to-connect-power-bi.md
+- name: 重大な変更
+  items:
+    - name: Azure Time Series Insights プレビュー
+      items:
+        - name: Long データ型のサポートの追加
+          href: time-series-insights-long-data-type.md
 - name: リファレンス
   items:
     - name: Time Series Insights
