commit translated contents

--- a/articles/aks/index.yml
+++ b/articles/aks/index.yml
@@ -9,12 +9,12 @@ metadata:
   author: laurenhughes
   ms.author: lahugh
   ms.date: 03/25/2020
-  ms.openlocfilehash: 4829b95fb62a33406248f503e646238e116cb413
-  ms.sourcegitcommit: 6397c1774a1358c79138976071989287f4a81a83
+  ms.openlocfilehash: 44ef4686cd2213230479711060e3f0558981bc18
+  ms.sourcegitcommit: 9bfd94307c21d5a0c08fe675b566b1f67d0c642d
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 04/07/2020
-  ms.locfileid: "80803281"
+  ms.lasthandoff: 06/17/2020
+  ms.locfileid: "84976474"
 landingContent:
 - title: Azure Kubernetes Service (AKS) について
   linkLists:
@@ -48,18 +48,14 @@ landingContent:
       url: kubernetes-walkthrough-portal.md
     - text: Resource Manager テンプレート
       url: kubernetes-walkthrough-rm-template.md
-- title: AKS と Dev Spaces を使用したアプリケーションの開発とデバッグ
+- title: Local Process with Kubernetes を使用してアプリケーションを開発およびデバッグする
   linkLists:
-  - linkListType: quickstart
+  - linkListType: how-to-guide
     links:
-    - text: Java
-      url: ../dev-spaces/quickstart-java.md
-    - text: .NET と VS Code
-      url: ../dev-spaces/quickstart-netcore.md
-    - text: .NET と Visual Studio
-      url: ../dev-spaces/quickstart-netcore-visualstudio.md
-    - text: Node.js
-      url: ../dev-spaces/quickstart-nodejs.md
+    - text: Visual Studio Code を使用して Local Process with Kubernetes を利用する (プレビュー)
+      url: ../dev-spaces/how-to/local-process-kubernetes-vs-code.md
+    - text: Visual Studio で Local Process with Kubernetes を使用する (プレビュー)
+      url: ../dev-spaces/how-to/local-process-kubernetes-visual-studio.md
 - title: アプリケーションのデプロイ、管理、更新
   linkLists:
   - linkListType: tutorial
