--- a/articles/logic-apps/toc.yml
+++ b/articles/logic-apps/toc.yml
@@ -94,12 +94,6 @@
           href: logic-apps-handle-large-messages.md
         - name: 調整の問題または 429 エラーを処理する
           href: handle-throttling-problems-429-errors.md
-        - name: セキュリティで保護
-          items:
-            - name: ロジック アプリのセキュリティを強化する
-              href: logic-apps-securing-a-logic-app.md
-            - name: マネージド ID による認証
-              href: create-managed-service-identity.md
         - name: カスタム コネクタを開発する
           href: custom-connector-overview.md
         - name: カスタム API を開発する
@@ -316,6 +310,14 @@
           href: logic-apps-enterprise-integration-xml-validation.md
         - name: Yammer
           href: ../connectors/connectors-create-api-yammer.md
+    - name: セキュリティで保護
+      items:
+        - name: ロジック アプリのセキュリティを強化する
+          href: logic-apps-securing-a-logic-app.md
+        - name: マネージド ID による認証
+          href: create-managed-service-identity.md
+        - name: ロジック アプリで接続をブロックする
+          href: block-connections-connectors.md
     - name: 管理する
       items:
         - name: ロジック アプリを管理する - Azure portal
