--- a/articles/machine-learning/toc.yml
+++ b/articles/machine-learning/toc.yml
@@ -6,7 +6,7 @@
     - name: Azure Machine Learning とは
       displayName: 'AML, services, overview, introduction'
       href: overview-what-is-azure-ml.md
-    - name: Azure Machine Learning と Studio
+    - name: Azure Machine Learning と Studio (クラシック)
       displayName: 'AML, Studio, designer'
       href: compare-azure-ml-to-studio-classic.md
     - name: アーキテクチャと用語
@@ -323,6 +323,9 @@
         - name: 予測モデルを自動トレーニングする
           displayName: time series
           href: how-to-auto-train-forecast.md
+        - name: データの分割とクロス検証 (Python)
+          displayName: 'automl, feature engineering, feature importance'
+          href: how-to-configure-cross-validation-data-splits.md
         - name: 自動 ML での特徴量化 (Python)
           displayName: 'automl, feature engineering, feature importance'
           href: how-to-configure-auto-features.md
