--- a/articles/virtual-machines/troubleshooting/toc.yml
+++ b/articles/virtual-machines/troubleshooting/toc.yml
@@ -99,6 +99,8 @@
           href: unresponsive-vm-apply-windows-update.md
         - name: グループ ポリシーの適用時に VM が応答しない
           href: unresponsive-vm-apply-group-policy.md
+        - name: セキュリティ ポリシーの適用時に VM が応答しない
+          href: unresponsive-vm-apply-security-policy.md
 - name: VM に接続できない
   items:
     - name: RDP
