--- a/articles/event-grid/toc.yml
+++ b/articles/event-grid/toc.yml
@@ -244,7 +244,7 @@
           href: troubleshoot-errors.md
         - name: サブスクリプション検証のトラブルシューティング
           href: troubleshoot-subscription-validation.md
-        - name: イベント配信の監視
+        - name: メトリックを表示し、アラートを設定する
           href: monitor-event-delivery.md
 - name: リファレンス
   items:
