--- a/articles/key-vault/certificates/toc.yml
+++ b/articles/key-vault/certificates/toc.yml
@@ -34,10 +34,14 @@
       href: create-certificate-scenarios.md
     - name: 証明書の作成方法
       href: create-certificate.md
+- name: 操作方法ガイド
+  items:
+    - name: Key Vault と DigiCert CA の統合
+      href: how-to-integrate-certificate-authority.md
 - name: リファレンス
   items:
     - name: Azure PowerShell
-      href: '/powershell/module/az.keyvault/?view=azps-1.2.0#key_vault'
+      href: /powershell/module/az.keyvault/?view=azps-1.2.0#key_vault
     - name: Azure CLI
       href: /cli/azure/keyvault
     - name: .NET
