--- a/articles/cost-management-billing/reservations/toc.yml
+++ b/articles/cost-management-billing/reservations/toc.yml
@@ -17,7 +17,7 @@
           href: prepare-buy-reservation.md
         - name: App Service
           href: prepay-app-service-isolated-stamp.md
-        - name: Azure Cache for Redis の予約
+        - name: Azure Cache for Redis
           href: ../../azure-cache-for-redis/cache-reserved-pricing.md?toc=/azure/cost-management-billing/reservations/toc.json
         - name: Cosmos DB
           href: ../../cosmos-db/cosmos-db-reserved-capacity.md?toc=/azure/cost-management-billing/reservations/toc.json
@@ -52,7 +52,7 @@
         - name: 予約の管理
           href: manage-reserved-vm-instance.md
         - name: 最適化設定の変更
-          href: 'manage-reserved-vm-instance.md#change-optimize-setting-for-reserved-vm-instances'
+          href: manage-reserved-vm-instance.md#change-optimize-setting-for-reserved-vm-instances
         - name: 予約の交換と返金
           href: exchange-and-refund-azure-reservations.md
     - name: コストの報告
