--- a/articles/virtual-machines/linux/toc.yml
+++ b/articles/virtual-machines/linux/toc.yml
@@ -56,12 +56,8 @@
       href: tutorial-azure-devops-blue-green-strategy.md
     - name: 15d - Azure Pipelines を使用した CI/CD (YAML)
       href: tutorial-build-deploy-azure-pipelines.md
-    - name: 16a - LAMP スタックの作成
+    - name: 16 - LAMP スタックの作成
       href: tutorial-lamp-stack.md
-    - name: 16b - LEMP スタックの作成
-      href: tutorial-lemp-stack.md
-    - name: 16c - MEAN スタックの作成
-      href: tutorial-mean-stack.md
     - name: 17 - SSL による Web サーバーのセキュリティ保護
       href: tutorial-secure-web-server.md
 - name: サンプル
