--- a/articles/azure-arc/kubernetes/index.yml
+++ b/articles/azure-arc/kubernetes/index.yml
@@ -10,12 +10,12 @@ metadata:
   ms.topic: landing-page
   ms.date: 05/19/2020
   ms.author: mlearned
-  ms.openlocfilehash: a2ba3c789d6f7b6dea352468c01533b21c56812d
-  ms.sourcegitcommit: fdec8e8bdbddcce5b7a0c4ffc6842154220c8b90
+  ms.openlocfilehash: 80f3faa93315d5c20c2e1876cb46f7771433969d
+  ms.sourcegitcommit: 23604d54077318f34062099ed1128d447989eea8
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 05/19/2020
-  ms.locfileid: "83661977"
+  ms.lasthandoff: 06/20/2020
+  ms.locfileid: "85117694"
 landingContent:
 - title: Azure Arc の概要
   linkLists:
@@ -38,7 +38,7 @@ landingContent:
     - text: Helm で GitOps を使用する
       url: ./use-gitops-with-helm.md
     - text: Azure Monitor for containers を使用する
-      url: ./deploy-azure-monitor-for-containers.md
+      url: ../../azure-monitor/insights/container-insights-enable-arc-enabled-clusters.md
     - text: Azure Policy を使用する
       url: ./use-azure-policy.md
     - text: Azure IoT Edge ワークロードをデプロイする
