--- a/articles/api-management/index.yml
+++ b/articles/api-management/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: georgewallace
   ms.author: gwallace
   ms.date: 03/08/2020
-  ms.openlocfilehash: 2ed84dfdfcabafe7222b8cb64a853ed04e2335a2
-  ms.sourcegitcommit: 0947111b263015136bca0e6ec5a8c570b3f700ff
+  ms.openlocfilehash: e0a6ed07aa8805b8506533fa455aab178bba799d
+  ms.sourcegitcommit: 398fecceba133d90aa8f6f1f2af58899f613d1e3
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 03/24/2020
-  ms.locfileid: "78944164"
+  ms.lasthandoff: 06/21/2020
+  ms.locfileid: "85125202"
 landingContent:
 - title: API Management について
   linkLists:
@@ -60,9 +60,11 @@ landingContent:
   - linkListType: sample
     links:
     - text: ポリシー
-      url: policy-samples.md
+      url: ./policies/index.md
     - text: Azure PowerShell
       url: powershell-samples.md
+    - text: Azure Policy の組み込み
+      url: ./policy-samples.md
 - title: Architecture
   linkLists:
   - linkListType: architecture
